@@ -16,6 +16,8 @@ import static command_request.CommandRequestOuterClass.RequestType.BitOp;
 import static command_request.CommandRequestOuterClass.RequestType.BitPos;
 import static command_request.CommandRequestOuterClass.RequestType.ClientGetName;
 import static command_request.CommandRequestOuterClass.RequestType.ClientId;
+import static command_request.CommandRequestOuterClass.RequestType.ClientPause;
+import static command_request.CommandRequestOuterClass.RequestType.ClientUnpause;
 import static command_request.CommandRequestOuterClass.RequestType.ConfigGet;
 import static command_request.CommandRequestOuterClass.RequestType.ConfigResetStat;
 import static command_request.CommandRequestOuterClass.RequestType.ConfigRewrite;
@@ -253,12 +255,11 @@ import static glide.api.models.commands.stream.StreamTrimOptions.TRIM_EXACT_VALK
 import static glide.api.models.commands.stream.StreamTrimOptions.TRIM_MINID_VALKEY_API;
 import static glide.api.models.commands.stream.XInfoStreamOptions.COUNT;
 import static glide.api.models.commands.stream.XInfoStreamOptions.FULL;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import com.google.protobuf.ByteString;
-import command_request.CommandRequestOuterClass.Command;
-import command_request.CommandRequestOuterClass.Command.ArgsArray;
 import command_request.CommandRequestOuterClass.RequestType;
+import glide.api.models.commands.ClientPauseMode;
 import glide.api.models.commands.ConditionalChange;
 import glide.api.models.commands.ExpireOptions;
 import glide.api.models.commands.ExpirySet;
@@ -318,6 +319,7 @@ import glide.api.models.commands.stream.StreamReadGroupOptions;
 import glide.api.models.commands.stream.StreamReadOptions;
 import glide.api.models.commands.stream.StreamTrimOptions.MinId;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.LinkedList;
 import java.util.List;
@@ -340,7 +342,7 @@ public class BatchTests {
     @ParameterizedTest
     @MethodSource("getBatchBuilders")
     public void batch_builds_protobuf_request(BaseBatch<?> batch) {
-        List<Pair<RequestType, ArgsArray>> results = new LinkedList<>();
+        List<Pair<RequestType, byte[][]>> results = new LinkedList<>();
 
         batch.get("key");
         results.add(Pair.of(Get, buildArgs("key")));
@@ -378,10 +380,10 @@ public class BatchTests {
         batch.info(new Section[] {EVERYTHING});
         results.add(Pair.of(Info, buildArgs(EVERYTHING.toString())));
 
-        batch.mset(Map.of("key", "value"));
+        batch.mset(Collections.singletonMap("key", "value"));
         results.add(Pair.of(MSet, buildArgs("key", "value")));
 
-        batch.msetnx(Map.of("key", "value"));
+        batch.msetnx(Collections.singletonMap("key", "value"));
         results.add(Pair.of(MSetNX, buildArgs("key", "value")));
 
         batch.mget(new String[] {"key"});
@@ -411,12 +413,12 @@ public class BatchTests {
         batch.getrange("key", 42, 54);
         results.add(Pair.of(GetRange, buildArgs("key", "42", "54")));
 
-        batch.hset("key", Map.of("field", "value"));
+        batch.hset("key", Collections.singletonMap("field", "value"));
         results.add(Pair.of(HSet, buildArgs("key", "field", "value")));
 
         batch.hsetex(
                 "key",
-                Map.of("field", "value"),
+                Collections.singletonMap("field", "value"),
                 HSetExOptions.builder().expiry(ExpirySet.Seconds(10L)).build());
         results.add(Pair.of(HSetEx, buildArgs("key", "EX", "10", "FIELDS", "1", "field", "value")));
 
@@ -700,6 +702,18 @@ public class BatchTests {
         batch.clientGetName();
         results.add(Pair.of(ClientGetName, buildArgs()));
 
+        batch.clientPause(1000);
+        results.add(Pair.of(ClientPause, buildArgs("1000")));
+
+        batch.clientPause(500, ClientPauseMode.WRITE);
+        results.add(Pair.of(ClientPause, buildArgs("500", "WRITE")));
+
+        batch.clientPause(500, ClientPauseMode.ALL);
+        results.add(Pair.of(ClientPause, buildArgs("500", "ALL")));
+
+        batch.clientUnpause();
+        results.add(Pair.of(ClientUnpause, buildArgs()));
+
         batch.configRewrite();
         results.add(Pair.of(ConfigRewrite, buildArgs()));
 
@@ -709,7 +723,7 @@ public class BatchTests {
         batch.configGet(new String[] {"maxmemory", "hash-max-listpack-entries"});
         results.add(Pair.of(ConfigGet, buildArgs("maxmemory", "hash-max-listpack-entries")));
 
-        var configSetMap = new LinkedHashMap<String, String>();
+        LinkedHashMap<String, String> configSetMap = new LinkedHashMap<String, String>();
         configSetMap.put("maxmemory", "100mb");
         configSetMap.put("save", "60");
 
@@ -910,10 +924,13 @@ public class BatchTests {
                                 Aggregate.MAX.toString(),
                                 WITH_SCORES_VALKEY_API)));
 
-        batch.xadd("key", Map.of("field1", "foo1"));
+        batch.xadd("key", Collections.singletonMap("field1", "foo1"));
         results.add(Pair.of(XAdd, buildArgs("key", "*", "field1", "foo1")));
 
-        batch.xadd("key", Map.of("field1", "foo1"), StreamAddOptions.builder().id("id").build());
+        batch.xadd(
+                "key",
+                Collections.singletonMap("field1", "foo1"),
+                StreamAddOptions.builder().id("id").build());
         results.add(Pair.of(XAdd, buildArgs("key", "id", "field1", "foo1")));
 
         batch.xadd("key", new String[][] {new String[] {"field1", "foo1"}});
@@ -929,10 +946,12 @@ public class BatchTests {
         results.add(
                 Pair.of(XTrim, buildArgs("key", TRIM_MINID_VALKEY_API, TRIM_EXACT_VALKEY_API, "id")));
 
-        batch.xread(Map.of("key", "id"));
+        batch.xread(Collections.singletonMap("key", "id"));
         results.add(Pair.of(XRead, buildArgs(READ_STREAMS_VALKEY_API, "key", "id")));
 
-        batch.xread(Map.of("key", "id"), StreamReadOptions.builder().block(1L).count(2L).build());
+        batch.xread(
+                Collections.singletonMap("key", "id"),
+                StreamReadOptions.builder().block(1L).count(2L).build());
         results.add(
                 Pair.of(
                         XRead,
@@ -1001,7 +1020,7 @@ public class BatchTests {
         batch.xgroupDelConsumer("key", "group", "consumer");
         results.add(Pair.of(XGroupDelConsumer, buildArgs("key", "group", "consumer")));
 
-        batch.xreadgroup(Map.of("key", "id"), "group", "consumer");
+        batch.xreadgroup(Collections.singletonMap("key", "id"), "group", "consumer");
         results.add(
                 Pair.of(
                         XReadGroup,
@@ -1015,7 +1034,7 @@ public class BatchTests {
         results.add(Pair.of(XGroupSetId, buildArgs("key", "group", "id", "ENTRIESREAD", "1")));
 
         batch.xreadgroup(
-                Map.of("key", "id"),
+                Collections.singletonMap("key", "id"),
                 "group",
                 "consumer",
                 StreamReadGroupOptions.builder().block(1L).count(2L).noack().build());
@@ -1255,7 +1274,7 @@ public class BatchTests {
         batch.touch(new String[] {"key1", "key2"});
         results.add(Pair.of(Touch, buildArgs("key1", "key2")));
 
-        batch.geoadd("key", Map.of("Place", new GeospatialData(10.0, 20.0)));
+        batch.geoadd("key", Collections.singletonMap("Place", new GeospatialData(10.0, 20.0)));
         results.add(Pair.of(GeoAdd, buildArgs("key", "10.0", "20.0", "Place")));
 
         batch.getbit("key", 1);
@@ -1263,7 +1282,7 @@ public class BatchTests {
 
         batch.geoadd(
                 "key",
-                Map.of("Place", new GeospatialData(10.0, 20.0)),
+                Collections.singletonMap("Place", new GeospatialData(10.0, 20.0)),
                 new GeoAddOptions(ConditionalChange.ONLY_IF_EXISTS, true));
         results.add(
                 Pair.of(
@@ -1683,23 +1702,22 @@ public class BatchTests {
         batch.wait(1L, 1000L);
         results.add(Pair.of(Wait, buildArgs("1", "1000")));
 
-        var protobufbatch = batch.getProtobufBatch().build();
+        java.util.List<BatchCommand> batchCommands = batch.getCommands();
 
-        for (int idx = 0; idx < protobufbatch.getCommandsCount(); idx++) {
-            Command protobuf = protobufbatch.getCommands(idx);
+        for (int idx = 0; idx < batchCommands.size(); idx++) {
+            BatchCommand cmd = batchCommands.get(idx);
 
-            assertEquals(results.get(idx).getLeft(), protobuf.getRequestType());
-            assertEquals(
-                    results.get(idx).getRight().getArgsCount(), protobuf.getArgsArray().getArgsCount());
-            assertEquals(results.get(idx).getRight(), protobuf.getArgsArray());
+            assertEquals(results.get(idx).getLeft().getNumber(), cmd.getRequestType());
+            byte[][] expectedArgs = results.get(idx).getRight();
+            assertArrayEquals(expectedArgs, cmd.getArgs());
         }
     }
 
-    static ArgsArray buildArgs(String... args) {
-        var builder = ArgsArray.newBuilder();
-        for (var arg : args) {
-            builder.addArgs(ByteString.copyFromUtf8(arg));
+    static byte[][] buildArgs(String... args) {
+        byte[][] result = new byte[args.length][];
+        for (int i = 0; i < args.length; i++) {
+            result[i] = args[i].getBytes(java.nio.charset.StandardCharsets.UTF_8);
         }
-        return builder.build();
+        return result;
     }
 }
