@@ -1,7 +1,12 @@
 /** Copyright Valkey GLIDE Project Contributors - SPDX Identifier: Apache-2.0 */
 package glide.standalone;
 
+import static glide.Constants.IP_ADDRESS_V4;
+import static glide.Constants.IP_ADDRESS_V6;
 import static glide.TestConfiguration.SERVER_VERSION;
+import static glide.TestConfiguration.STANDALONE_HOSTS;
+import static glide.TestUtilities.IAM_USERNAME;
+import static glide.TestUtilities.assertConnected;
 import static glide.TestUtilities.commonClientConfig;
 import static glide.TestUtilities.deleteAclUser;
 import static glide.TestUtilities.getRandomString;
@@ -14,23 +19,31 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
+import glide.TestConfiguration;
+import glide.TestUtilities;
 import glide.api.GlideClient;
+import glide.api.models.configuration.GlideClientConfiguration;
+import glide.api.models.configuration.IamAuthConfig;
+import glide.api.models.configuration.NodeAddress;
 import glide.api.models.configuration.ServerCredentials;
 import glide.api.models.exceptions.ClosingException;
 import glide.api.models.exceptions.RequestException;
-import java.util.Map;
+import java.util.Collections;
 import java.util.UUID;
 import java.util.concurrent.ExecutionException;
 import lombok.SneakyThrows;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
+import org.junit.jupiter.api.condition.EnabledIfEnvironmentVariable;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 
 @Timeout(20) // seconds
 public class StandaloneClientTests {
 
-    @SneakyThrows
     @Test
+    @SneakyThrows
     public void register_client_name_and_version() {
         String minVersion = "7.2.0";
         assumeTrue(
@@ -41,18 +54,18 @@ public class StandaloneClientTests {
 
         String info = (String) client.customCommand(new String[] {"CLIENT", "INFO"}).get();
         assertTrue(info.contains("lib-name=GlideJava"));
-        assertTrue(info.contains("lib-ver=unknown"));
+        assertTrue(info.contains("lib-ver=" + TestConfiguration.EXPECTED_GLIDE_VERSION));
 
         client.close();
     }
 
-    @SneakyThrows
     @Test
+    @SneakyThrows
     public void can_connect_with_auth_require_pass() {
         GlideClient client = GlideClient.createClient(commonClientConfig().build()).get();
 
         String password = "TEST_AUTH";
-        client.configSet(Map.of("requirepass", password)).get();
+        client.configSet(Collections.singletonMap("requirepass", password)).get();
 
         // Creation of a new client without a password should fail
         ExecutionException exception =
@@ -76,14 +89,14 @@ public class StandaloneClientTests {
         assertEquals(value, auth_client.get(key).get());
 
         // Reset password
-        client.configSet(Map.of("requirepass", "")).get();
+        client.configSet(Collections.singletonMap("requirepass", "")).get();
 
         auth_client.close();
         client.close();
     }
 
-    @SneakyThrows
     @Test
+    @SneakyThrows
     public void can_connect_with_auth_acl() {
         GlideClient client = GlideClient.createClient(commonClientConfig().build()).get();
 
@@ -133,8 +146,8 @@ public class StandaloneClientTests {
         client.close();
     }
 
-    @SneakyThrows
     @Test
+    @SneakyThrows
     public void select_standalone_database_id() {
         GlideClient client = GlideClient.createClient(commonClientConfig().databaseId(4).build()).get();
 
@@ -144,8 +157,8 @@ public class StandaloneClientTests {
         client.close();
     }
 
-    @SneakyThrows
     @Test
+    @SneakyThrows
     public void client_name() {
         GlideClient client =
                 GlideClient.createClient(commonClientConfig().clientName("TEST_CLIENT_NAME").build()).get();
@@ -167,46 +180,46 @@ public class StandaloneClientTests {
         assertInstanceOf(ClosingException.class, executionException.getCause());
     }
 
-    @SneakyThrows
     @Test
+    @SneakyThrows
     public void update_connection_password_auth_non_valid_pass() {
         // Test Client fails on call to updateConnectionPassword with invalid parameters
-        try (var testClient = GlideClient.createClient(commonClientConfig().build()).get()) {
-            var emptyPasswordException =
+        try (GlideClient testClient = GlideClient.createClient(commonClientConfig().build()).get()) {
+            ExecutionException emptyPasswordException =
                     assertThrows(
                             ExecutionException.class, () -> testClient.updateConnectionPassword("", true).get());
             assertInstanceOf(RequestException.class, emptyPasswordException.getCause());
 
-            var noPasswordException =
+            ExecutionException noPasswordException =
                     assertThrows(
                             ExecutionException.class, () -> testClient.updateConnectionPassword(true).get());
             assertInstanceOf(RequestException.class, noPasswordException.getCause());
         }
     }
 
-    @SneakyThrows
     @Test
+    @SneakyThrows
     public void update_connection_password_no_server_auth() {
-        var pwd = UUID.randomUUID().toString();
+        String pwd = UUID.randomUUID().toString();
 
-        try (var testClient = GlideClient.createClient(commonClientConfig().build()).get()) {
+        try (GlideClient testClient = GlideClient.createClient(commonClientConfig().build()).get()) {
             // validate that we can use the client
             assertNotNull(testClient.info().get());
 
             // Test that immediate re-authentication fails when no server password is set.
-            var exception =
+            ExecutionException exception =
                     assertThrows(
                             ExecutionException.class, () -> testClient.updateConnectionPassword(pwd, true).get());
             assertInstanceOf(RequestException.class, exception.getCause());
         }
     }
 
-    @SneakyThrows
     @Test
+    @SneakyThrows
     public void update_connection_password_long() {
-        var pwd = RandomStringUtils.randomAlphabetic(1000);
+        String pwd = RandomStringUtils.randomAlphabetic(1000);
 
-        try (var testClient = GlideClient.createClient(commonClientConfig().build()).get()) {
+        try (GlideClient testClient = GlideClient.createClient(commonClientConfig().build()).get()) {
             // validate that we can use the client
             assertNotNull(testClient.info().get());
 
@@ -216,22 +229,22 @@ public class StandaloneClientTests {
     }
 
     @Timeout(50)
-    @SneakyThrows
     @Test
+    @SneakyThrows
     public void replace_password_immediateAuth_wrong_password() {
-        var pwd = UUID.randomUUID().toString();
-        var notThePwd = UUID.randomUUID().toString();
+        String pwd = UUID.randomUUID().toString();
+        String notThePwd = UUID.randomUUID().toString();
 
         GlideClient adminClient = GlideClient.createClient(commonClientConfig().build()).get();
-        try (var testClient = GlideClient.createClient(commonClientConfig().build()).get()) {
+        try (GlideClient testClient = GlideClient.createClient(commonClientConfig().build()).get()) {
             // validate that we can use the client
             assertNotNull(testClient.info().get());
 
             // set the password to something else
-            adminClient.configSet(Map.of("requirepass", notThePwd)).get();
+            adminClient.configSet(Collections.singletonMap("requirepass", notThePwd)).get();
 
             // Test that re-authentication fails when using wrong password.
-            var exception =
+            ExecutionException exception =
                     assertThrows(
                             ExecutionException.class, () -> testClient.updateConnectionPassword(pwd, true).get());
             assertInstanceOf(RequestException.class, exception.getCause());
@@ -239,18 +252,18 @@ public class StandaloneClientTests {
             // But using something else password returns OK
             assertEquals(OK, testClient.updateConnectionPassword(notThePwd, true).get());
         } finally {
-            adminClient.configSet(Map.of("requirepass", "")).get();
+            adminClient.configSet(Collections.singletonMap("requirepass", "")).get();
             adminClient.close();
         }
     }
 
     @Timeout(50)
-    @SneakyThrows
     @Test
+    @SneakyThrows
     public void test_update_connection_password_acl_user() {
-        var username = "username";
-        var pwd = UUID.randomUUID().toString();
-        var newPwd = UUID.randomUUID().toString();
+        String username = "username";
+        String pwd = UUID.randomUUID().toString();
+        String newPwd = UUID.randomUUID().toString();
 
         GlideClient adminClient = GlideClient.createClient(commonClientConfig().build()).get();
 
@@ -296,12 +309,12 @@ public class StandaloneClientTests {
     }
 
     @Timeout(50)
-    @SneakyThrows
     @Test
+    @SneakyThrows
     public void test_update_connection_password_connection_lost_before_password_update_acl_user() {
-        var username = "username";
-        var pwd = UUID.randomUUID().toString();
-        var newPwd = UUID.randomUUID().toString();
+        String username = "username";
+        String pwd = UUID.randomUUID().toString();
+        String newPwd = UUID.randomUUID().toString();
 
         GlideClient adminClient = GlideClient.createClient(commonClientConfig().build()).get();
 
@@ -334,7 +347,7 @@ public class StandaloneClientTests {
 
             // Check that the client is unable to perform operations that require server connection,
             // as it is still trying to reconnect with the old password
-            var timeoutException =
+            ExecutionException timeoutException =
                     assertThrows(
                             ExecutionException.class,
                             () -> testClient.updateConnectionPassword(newPwd, true).get());
@@ -346,12 +359,12 @@ public class StandaloneClientTests {
     }
 
     @Timeout(50)
-    @SneakyThrows
     @Test
+    @SneakyThrows
     public void test_update_connection_password_replace_password_immediateAuth_acl_user() {
-        var username = "username";
-        var pwd = UUID.randomUUID().toString();
-        var newPwd = UUID.randomUUID().toString();
+        String username = "username";
+        String pwd = UUID.randomUUID().toString();
+        String newPwd = UUID.randomUUID().toString();
 
         GlideClient adminClient = GlideClient.createClient(commonClientConfig().build()).get();
 
@@ -383,12 +396,12 @@ public class StandaloneClientTests {
     }
 
     @Timeout(50)
-    @SneakyThrows
     @Test
+    @SneakyThrows
     public void test_update_connection_password_non_valid_auth_acl_user() {
-        var username = "username";
-        var pwd = UUID.randomUUID().toString();
-        var newPwd = UUID.randomUUID().toString();
+        String username = "username";
+        String pwd = UUID.randomUUID().toString();
+        String newPwd = UUID.randomUUID().toString();
 
         GlideClient adminClient = GlideClient.createClient(commonClientConfig().build()).get();
 
@@ -404,12 +417,12 @@ public class StandaloneClientTests {
                                             .build())
                             .get();
 
-            var emptyPasswordException =
+            ExecutionException emptyPasswordException =
                     assertThrows(
                             ExecutionException.class, () -> testClient.updateConnectionPassword("", true).get());
             assertInstanceOf(RequestException.class, emptyPasswordException.getCause());
 
-            var noPasswordException =
+            ExecutionException noPasswordException =
                     assertThrows(
                             ExecutionException.class, () -> testClient.updateConnectionPassword(true).get());
             assertInstanceOf(RequestException.class, noPasswordException.getCause());
@@ -417,5 +430,74 @@ public class StandaloneClientTests {
             deleteAclUser(adminClient, username);
             adminClient.close();
         }
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {IP_ADDRESS_V4, IP_ADDRESS_V6})
+    @SneakyThrows
+    public void test_connect_with_ip_address_succeeds(String ipAddress) {
+        Integer port = Integer.parseInt(STANDALONE_HOSTS[0].split(":")[1]);
+        NodeAddress address = NodeAddress.builder().host(ipAddress).port(port).build();
+        GlideClientConfiguration config =
+                GlideClientConfiguration.builder().address(address).useTLS(false).build();
+
+        try (GlideClient client = GlideClient.createClient(config).get()) {
+            assertConnected(client);
+        }
+    }
+
+    @Test
+    @SneakyThrows
+    @EnabledIfEnvironmentVariable(named = "AWS_ACCESS_KEY_ID", matches = ".*")
+    public void test_iam_authentication_with_mock_credentials() {
+        // See DEVELOPER.md for instructions on running IAM authentication tests
+
+        // Create client with IAM authentication
+        try (GlideClient client = createStandaloneClientWithIam(5)) {
+
+            // Verify connection works
+            assertConnected(client);
+
+            // Test basic operations
+            assertEquals("OK", client.set("iam_test_key", "iam_test_value").get());
+            assertEquals("iam_test_value", client.get("iam_test_key").get());
+
+            // Test manual token refresh
+            client.refreshIamToken().get();
+
+            // Verify operations still work after token refresh
+            assertEquals("OK", client.set("iam_test_key2", "iam_test_value2").get());
+            assertEquals("iam_test_value2", client.get("iam_test_key2").get());
+        }
+    }
+
+    @Test
+    @SneakyThrows
+    @EnabledIfEnvironmentVariable(named = "AWS_ACCESS_KEY_ID", matches = ".*")
+    public void test_iam_authentication_automatic_token_refresh()
+            throws InterruptedException, ExecutionException {
+        // NOTE: See test_iam_authentication_with_mock_credentials for setup instructions
+
+        try (GlideClient client = createStandaloneClientWithIam(2)) {
+
+            // Verify initial connection
+            assertConnected(client);
+
+            // Wait for automatic token refresh to occur
+            Thread.sleep(3000);
+
+            // Verify client still works after automatic refresh
+            assertEquals("OK", client.set("iam_auto_refresh_key", "iam_auto_refresh_value").get());
+            assertEquals("iam_auto_refresh_value", client.get("iam_auto_refresh_key").get());
+        }
+    }
+
+    @SneakyThrows
+    private GlideClient createStandaloneClientWithIam(int refreshIntervalSeconds) {
+        IamAuthConfig iamConfig = TestUtilities.createTestIamConfig(refreshIntervalSeconds);
+        ServerCredentials credentials =
+                ServerCredentials.builder().username(IAM_USERNAME).iamConfig(iamConfig).build();
+        // Note: useTLS is inherited from commonClientConfig() which respects the -Dtls system property
+        return GlideClient.createClient(commonClientConfig().credentials(credentials).build()).get();
     }
 }
